[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "traffic-openenv"
version = "0.1.0"
description = "Traffic Environment for OpenEnv"
dependencies = [
    "openenv-core>=0.2.0",
    "fastapi",
    "uvicorn",
    "pydantic",
    "requests",
    "openai"
]

[project.scripts]
server = "server.app:app"

[tool.setuptools]
packages = ["server"]