[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "traffic-openenv"
version = "0.1.0"
dependencies = [
    "openenv-core>=0.2.0",
    "fastapi",
    "uvicorn",
    "pydantic",
    "requests",
    "openai"
]

[project.scripts]
# This MUST point to the function 'main', not the variable 'app'
server = "server.app:main"

[tool.setuptools]
packages = ["server"]
