[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "traffic-openenv"
version = "0.1.0"
dependencies = [
    "openenv-core>=0.2.0",
    "fastapi",
    "uvicorn",
    "pydantic",
    "requests",
    "openai"
]

[project.scripts]
# This tells the validator exactly where the file is
server = "server.app:main"

[tool.setuptools]
# This tells the builder to include the server folder
packages = ["server"]
